replicaset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycss
  labels:
    env: prod
    app: web
  namespace: devnamespace
  annotations:
    kubernetes.io/change-cause: "glass-application"
spec:
  minReadySeconds: 6
  replicas: 3
  selector:
    matchLabels:
      app: my-css
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: my-css
      name: css-pod
    spec:
      containers:
        - name: css-con
          image: longflew/mycssimages:glass 
          ports:
            - containerPort: 80
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              cpu: "500m" 
              memory: "1500Mi"  
            limits:
              cpu: "1800m"        
              memory: "7500Mi"
