service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: svc-yellow
spec: 
   type: LoadBalancer
   selector: 
     app: yellowapp
   ports: 
     - port: 80
