svc-glass.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-glass
spec:
   type: LoadBalancer
   selector:
     app: my-css-glass
   ports:
     - port: 80
