svc-villa.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-villa
spec:
   type: LoadBalancer
   selector:
     app: my-css-villa
   ports:
     - port: 80
